# pullpiri

./: Makefile  design.md  package-lock.json  package.json  run-ci.yml  test_statemanager.md
.github/ISSUE_TEMPLATE/: tracking-issue.yml
.github/agents/: migration-agent.agent.md
.github/workflows/: create-issue-for-merged-pr.yml  run-ci.yml
containers/: Dockerfile  install-piccolo.sh  piccolo-agent.sh  piccolo-player.sh  piccolo-server.sh  piccolo-server.yaml
containers/devonly/: install-agent.sh  install-piccolo.sh
containers/devonly/scripts/: piccolo-player.sh  piccolo-server.sh
doc/: StateManager_Model_Usage_Examples.md
doc/design/: StateManager_Model_Implementation_Design.md
doc/scripts/: install_nodeagent.sh  update_server_ip.sh  version.txt
docs/: PULLPIRI_FLEET_MIGRATION_GUIDE.docx  PULLPIRI_FLEET_MIGRATION_GUIDE.md  VSS_INTEGRATION_DESIGN.md
examples/: helloworld.sh
examples/resources/: vss_scenario.yaml
scripts/: buildNparse.sh  clippy_check.sh  deny_check.sh  fmt_check.sh  installdeps.sh  license_check.sh  testNparse.sh  test_coverage.sh
src/: Cargo.toml  settings.yaml
src/common/: Cargo.toml  build.rs
src/server/apiserver/: Cargo.toml
src/server/apiserver/src/: lib.rs  main.rs  manager.rs
src/server/apiserver/src/artifact/: mod.rs
src/server/apiserver/src/grpc/: receiver.rs
src/server/apiserver/src/grpc/sender/: nodeagent.rs
src/server/apiserver/src/node/: manager.rs  node_lookup.rs  registry.rs
src/server/apiserver/src/uprotocol/: config.rs  listener.rs  mod.rs  subscriber.rs
src/tools/: deny.toml
(+157 files in other folders)
