# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "apiserver"
version = "0.1.0"
edition = "2021"
description = "A Pullpiri daemon that operates like API server of k8s"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tarpaulin_include = []
# ========================================
# [신규 추가] uProtocol 연동 (optional)
# ========================================
uprotocol = ["up-rust", "up-transport-zenoh", "zenoh-config", "async-trait"]

[dependencies]
common = { workspace = true }
axum = "0.7.7"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.143"
chrono = "0.4.43"
tonic = "0.12.3"
prost = "0.13.3"
base64 = "0.22"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }
tower-http ={ version = "0.6.1", features = ["cors"]}
tower = "0.4"
tokio-stream = "0.1.18"

[dev-dependencies]
futures = "0.3"
bytes = "1.0"

# ========================================
# [신규 추가] uProtocol 연동 (optional)
# ========================================
[dependencies.up-rust]
version = "0.9"
optional = true

[dependencies.up-transport-zenoh]
version = "0.9"
optional = true

[dependencies.zenoh-config]
version = "1.7"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true